# Thesis

./: README.md  index.html  params.json
2DTracking/CUDA/: SimpleTests.cpp
2DTracking/CUDA/cuda/: CUDATest.cu  GPUSetup.cu  GPUTracking.cu  PerfTest.cu
2DTracking/CUDA/cuda_unittests/: ParticleTracker_unittests.cu
2DTracking/CUDA/data/mesh/: particle
2DTracking/CUDA/data/mesh2/: owner
2DTracking/CUDA/mesh/: Mesh.cpp  Mesh.h  MeshReader.h
2DTracking/CUDA/output/: mesh.cmd  sample_mesh.m
2DTracking/CUDA/particle/: Particle.h
2DTracking/CUDA/tools/: GenPoints.py
2DTracking/CUDA/unittests/: Mesh_unittests.cpp  StartUnittests.cpp
2DTracking/CUDA/visualizer/: GnuPlotVisualizer.cpp  MatlabVisualizer.cpp
Misc/: UML Class cheatsheet.graffle  awkTips.txt  vimTips.txt
Presentation/libsOverview.graffle/: data.plist
Thesis/2DTracking/CUDA/: CMakeLists.txt
Thesis/2DTracking/CUDA/cuda/: Kernel.cu
Thesis/2DTracking/CUDA/cuda_unittests/: StartUnittests.cu
Thesis/2DTracking/CUDA/data/mesh/: faces  points
Thesis/2DTracking/CUDA/data/mesh2/: centroids  neighbour
Thesis/2DTracking/CUDA/mesh/: MeshReader.cpp
Thesis/2DTracking/CUDA/output/: mesh.m
Thesis/2DTracking/CUDA/particle/: Particle.cpp
Thesis/2DTracking/CUDA/unittests/: ParticleTracker_unittests.cpp
Thesis/2DTracking/CUDA/visualizer/: GnuPlotVisualizer.h  MatlabVisualizer.h
Thesis/Kolloquium/abstract/: abstract.tex
Thesis/Presentation/libsOverview (Autosaved).graffle/: data.plist
Thesis/doc/: build.sh  clean.sh  main.aux  main.blg  main.tex  viewTizk.tex
Thesis/doc/bib/: ref.bib
Thesis/doc/content/: GPUComputing.tex  ack.aux  appendix.aux  coding.aux  conclusion.tex  gpu.aux  gpu.tex  intro.aux  openFoam.tex  particleTracking.aux  particleTracking.tex  results.aux  results.tex  self.tex  summaries.tex  summary.tex  title.aux  title.tex
Thesis/doc/diagrams/: ParticleEngineOverview.graffle  ReadParticles.graffle
Thesis/doc/illustratorFigures/: drawingTorus.ai  torus.ai
Thesis/plotting/: avg_values.py  cpuTimes.txt
Thesis/plotting/oldTimes/: cpuTimes.txt
Thesis/schedule/: genWeeklist.py  schedule.tex
doc/: main.bbl  main.lof  main.out  main.toc
doc/content/: abstract.aux  abstract.tex  ack.tex  appendix.tex  coding.tex  conclusion.aux  intro.tex  lptOnGPU.tex  openFoam.aux  self.aux  summaries.aux
doc/content/drawings/: cellNormals.tex  f2f.tex  lagrangianEulerianStep.tex
doc/content/gfx/: gpuVsCpu.tex  hslu_logo.eps  hslu_logo_farbig.eps
doc/diagrams/: CRTP.graffle  FlatMesh.graffle  ParticleClasses.graffle  ParticleEngine.graffle  Sequence tracking GPU.graffle  reduce.graffle  solidParticle.graffle  solidParticleClasses.graffle
doc/diagrams/widthPlot.graffle/: data.plist
doc/illustratorFigures/: EulerianLagrangian.ai
plotting/: cpuTimesRaw.txt  gpuTimes.txt  gpuTimesRaw.txt  plot.eps  plotTimes.gnuplot
plotting/oldTimes/: gpuTimes.txt
poster/: tabrueng.indd
(+6 files in other folders)
